--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "license": "MIT",
   "dependencies": {
     "koa": "^2.13.0",
-    "koa-static": "^5.0.0"
+    "koa-static": "^5.0.0",
+    "typescript": "^4.0.3"
   }
 }
