--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "author": "schokotets <moritzleni@gmail.com>",
   "license": "MIT",
   "dependencies": {
+    "@types/node": "^14.11.8",
     "koa": "^2.13.0",
     "koa-static": "^5.0.0",
     "typescript": "^4.0.3"
