--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
   "dependencies": {
     "@types/node": "^14.11.8",
     "koa": "^2.13.0",
+    "koa-bodyparser": "^4.3.0",
     "koa-static": "^5.0.0",
+    "mustache": "^4.0.1",
     "typescript": "^4.0.3"
   }
 }
