--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "koa-bodyparser": "^4.3.0",
     "koa-static": "^5.0.0",
     "mustache": "^4.0.1",
+    "ts-node": "^9.0.0",
     "typescript": "^4.0.3"
   }
 }
