--- a/package.json
+++ b/package.json
@@ -9,9 +9,10 @@
   "dependencies": {
     "@types/node": "^14.11.8",
     "koa": "^2.13.0",
-    "koa-bodyparser": "^4.3.0",
     "koa-static": "^5.0.0",
+    "multy": "^0.1.5",
     "mustache": "^4.0.1",
+    "pg": "^8.4.1",
     "ts-node": "^9.0.0",
     "typescript": "^4.0.3"
   }
