--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,6 +9,8 @@ services:
       - overlay
     links:
       - "database"
+    depends_on:
+      - "database"
     environment:
       - DB_HOST=database
       - DB_PORT=5432
