--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,4 @@
-version: "3.8"
+version: "3.3"
 services:
   web:
     build: .
@@ -18,7 +18,7 @@ services:
       - DB_USER=postgres
       - DB_PASSWORD=123password
   database:
-    image: "postgres"
+    image: postgres:11.6-alpine
     container_name: votetool-db
     networks:
       - overlay
