add VOTING_NAME env variable
it has the following effects:
 - name the tables with a prefix
    i.e. <VOTING_NAME>_votes and <VOTING_NAME>_voters
 - name the cookie with a suffix
    i.e. hasvoted-<VOTING_NAME>

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,6 +17,7 @@ services:
       - DB_NAME=votetool
       - DB_USER=postgres
       - DB_PASSWORD=123password
+      - VOTING_NAME=
   database:
     image: postgres:11.6-alpine
     container_name: votetool-db
