--- a/package.json
+++ b/package.json
@@ -8,10 +8,10 @@
   "license": "MIT",
   "dependencies": {
     "@types/node": "^14.11.8",
+    "handlebars": "^4.7.6",
     "koa": "^2.13.0",
     "koa-static": "^5.0.0",
     "multy": "^0.1.5",
-    "mustache": "^4.0.1",
     "pg": "^8.4.1",
     "ts-node": "^9.0.0",
     "typescript": "^4.0.3"
