--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,6 +12,8 @@ services:
     depends_on:
       - "database"
     environment:
+      - DATE_MIN=
+      - DATE_MAX=
       - DB_HOST=database
       - DB_PORT=5432
       - DB_NAME=votetool
