regional date formatting

--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "license": "MIT",
   "dependencies": {
     "@types/node": "^14.11.8",
+    "dayjs": "^1.9.3",
     "handlebars": "^4.7.6",
     "koa": "^2.13.0",
     "koa-static": "^5.0.0",
