--- a/package.json
+++ b/package.json
@@ -19,5 +19,8 @@
     "pg": "^8.4.1",
     "ts-node": "^9.0.0",
     "typescript": "^4.0.3"
+  },
+  "devDependencies": {
+    "prettier": "2.4.1"
   }
 }
