--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "MIT",
   "dependencies": {
     "@types/node": "^14.11.8",
+    "basic-auth": "^2.0.1",
     "dayjs": "^1.9.3",
     "handlebars": "^4.7.6",
     "koa": "^2.13.0",
